--- a/index.html
+++ b/index.html
@@ -30,14 +30,24 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input
+        required
+        name="username"
+        type="text"
+        placeholder="Email or phone number"
+      />
+      <input required name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <input type="submit" value="Sign Up" />
-      <a href="#">FInd Kokoa Account or Password</a>
+      <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please use portrait mode :)</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/3ab75a11cd.js"
       crossorigin="anonymous"
