--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ Nico - Kokoa Clone</title>
+    <title>Chat w/ JISOO - BLINK Talk</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>17:50</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-lock"></i>
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼴라스</h1>
+        <h1 class="alt-header__title">JISOO</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -39,15 +39,15 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
+      <div class="chat__timestamp">Tuesday, May 25, 2020</div>
 
       <div class="message-row">
-        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+        <img src="pic/jisoo.jfif" />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">JISOO</span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">01:03</span>
           </div>
         </div>
       </div>
