--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>Chats - BLINK Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>17:50</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-lock"></i>
@@ -29,7 +29,11 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span
+          ><a href="settings.html"
+            ><i class="fas fa-cog fa-lg"
+              ><div class="screen-header__icons-dot"></div></i></a
+        ></span>
       </div>
     </header>
 
@@ -38,19 +42,19 @@
         <div class="user-component user-component__chat">
           <div class="user-component__column">
             <img
-              src="https://avatars3.githubusercontent.com/u/3612017"
+              src="pic/jisoo.jfif"
               alt="#"
               class="user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Nicolas</h4>
+              <h4 class="user-component__title">JISOO</h4>
               <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
+                Hi, I am JISOO!
               </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
+            <span class="user-component__time">01:03</span>
             <div class="badge">1</div>
           </div>
         </div>
@@ -58,38 +62,57 @@
       <div class="user-component user-component__chat">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/3612017"
+            src="pic/jennie.jfif"
             alt="#"
             class="user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
+            <h4 class="user-component__title">JENNIE</h4>
             <h6 class="user-component__subtitle">
-              Please check My Kokoa Account Info
+              Hi, I am JENNIE!
             </h6>
           </div>
         </div>
         <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
+          <span class="user-component__time">01:16</span>
           <div class="badge">1</div>
         </div>
       </div>
       <div class="user-component user-component__chat">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/3612017"
+            src="pic/rose.jfif"
             alt="#"
             class="user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
+            <h4 class="user-component__title">ROSE</h4>
             <h6 class="user-component__subtitle">
-              Please check My Kokoa Account Info
+              Hi, I am ROSE!
             </h6>
           </div>
         </div>
         <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
+          <span class="user-component__time">02:11</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+      <div class="user-component user-component__chat">
+        <div class="user-component__column">
+          <img
+            src="pic/lisa.jfif"
+            alt="#"
+            class="user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">LISA</h4>
+            <h6 class="user-component__subtitle">
+              Hi, I am LISA!
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">03:27</span>
           <div class="badge">1</div>
         </div>
       </div>
@@ -106,7 +129,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">4</span>
             <i class="fas fa-comment fa-2x"></i>
           </a>
         </li>
