--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Clone</title>
+    <title>Find - BLINK Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>17:50</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-lock"></i>
@@ -29,8 +29,9 @@
         <span><i class="fas fa-search fa-lg"></i></span>
 
         <span
-          ><i class="fas fa-cog fa-lg"
-            ><div class="screen-header__icons-dot"></div></i
+          ><a href="settings.html"
+            ><i class="fas fa-cog fa-lg"
+              ><div class="screen-header__icons-dot"></div></i></a
         ></span>
       </div>
     </header>
@@ -63,52 +64,40 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#bts</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#blackpink</h5>
+            <h6 class="open-post__hashtags">#bp#blink#international</h6>
             <div class="open-post__members">
-              <img
-                src="https://avatars3.githubusercontent.com/u/3612017"
-                alt="BTS"
-              />
-              <span class="open-post__member-count">802 members</span>
+              <img src="pic/logo.svg" alt="" />
+              <span class="open-post__member-count">802002 members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
             </div>
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img
-                src="https://avatars3.githubusercontent.com/u/3612017"
-                alt="#"
-              />
+              <img src="pic/logo.svg" alt="#" />
               <div class="open-post__heart-count">
-                <i class="fas fa-heart fa-xs"></i> <span>326</span>
+                <i class="fas fa-heart fa-xs"></i> <span>50054</span>
               </div>
             </div>
           </div>
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#bts</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#rose</h5>
+            <h6 class="open-post__hashtags">#rose#solo#r</h6>
             <div class="open-post__members">
-              <img
-                src="https://avatars3.githubusercontent.com/u/3612017"
-                alt="BTS"
-              />
-              <span class="open-post__member-count">802 members</span>
+              <img src="pic/rose.jfif" alt="" />
+              <span class="open-post__member-count">45562 members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
             </div>
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img
-                src="https://avatars3.githubusercontent.com/u/3612017"
-                alt="#"
-              />
+              <img src="pic/rose.jfif" alt="#" />
               <div class="open-post__heart-count">
-                <i class="fas fa-heart fa-xs"></i> <span>326</span>
+                <i class="fas fa-heart fa-xs"></i> <span>32153</span>
               </div>
             </div>
           </div>
@@ -125,7 +114,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">4</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
