--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Clone</title>
+    <title>Settings - BLINK Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>17:50</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-lock"></i>
@@ -47,7 +47,7 @@
         </li>
         <li class="settings__setting">
           <div class="settings__setting-column">
-            <i class="fas fa-flask"></i><span>Kokoa Lab</span>
+            <i class="fas fa-flask"></i><span>BLINK Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
@@ -57,6 +57,22 @@
           </div>
           <div class="settings__setting-column">Latest Version</div>
         </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-music fa-lg"></i><span>Background Music</span>
+          </div>
+          <div class="settings__setting-column">Please Hover over!</div>
+        </li>
+        <ul class="settings__setting-bgm">
+          <li>Lovesick Girls</li>
+          <li>How You Like That</li>
+          <li>Gone</li>
+          <li><i class="fas fa-play"></i> On the Ground</li>
+          <li>마지막처럼</li>
+          <li>Forever Young</li>
+          <li>Pretty Savage</li>
+          <li>뚜두뚜두</li>
+        </ul>
       </ul>
     </main>
 
@@ -69,7 +85,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">4</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
