--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Clone</title>
+    <title>Welcome to BLINK Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>17:50</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-lock"></i>
@@ -24,23 +24,18 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to BLINK Talk</h1>
       <p class="welcome-haeder__text">
-        If you have a Kokoa Account, log in with your email or phone number.
+        If you have a BLINK Account, log in with your email or phone number.
       </p>
     </header>
 
     <form action="friends.html" method="get" id="login-form">
-      <input
-        required
-        name="username"
-        type="text"
-        placeholder="Email or phone number"
-      />
+      <input required name="username" type="email" placeholder="Email" />
       <input required name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <input type="submit" value="Sign Up" />
-      <a href="#">Find Kokoa Account or Password</a>
+      <a href="#">Find BLINK Account or Password</a>
     </form>
     <div id="no-mobile">
       <span>Your screen is too big :(</span>
