--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>More - Kokoa Clone</title>
+    <title>More - BLINK Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>17:50</span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-lock"></i>
@@ -41,14 +41,14 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/3612017"
+            src="pic/blink.svg"
             alt="#"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
+            <h4 class="user-component__title">BLINK</h4>
             <h6 class="user-component__subtitle">
-              +1 786 666 4999 <i class="fas fa-exclamation-circle"></i>
+              +201 688 1750 <i class="fas fa-exclamation-circle"></i>
             </h6>
           </div>
         </div>
@@ -74,7 +74,10 @@
           <i class="far fa-money-bill-alt"></i><span>Account</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-envelope"></i><span>Openchat</span>
+          <i class="fas fa-door-open"></i><span>Openchat</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-gift"></i><span>Gift</span>
         </div>
       </div>
       <div class="more-suggestions">
@@ -84,13 +87,13 @@
             <div class="more-suggestions__icon-img">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">BLINK Story</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-img">
-              <i class="fas fa-quote-right"></i>
+              <img src="pic/v.png" alt="" />
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">V LIVE</span>
           </div>
         </div>
       </div>
@@ -105,7 +108,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">4</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
